--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -442,19 +442,17 @@ gui.linkgrabber.tabs.context.deleteOthers = Remove all others
 gui.linkgrabber.tabs.context.newpackage = New package
 gui.linkgrabber.tabs.context.newPackage = New Package
 gui.linkgrabber.text = Here you can merge all collected links to one package and accept it later.
-gui.linkgrabber.title = Linkcollector active (D&D + Clipboard)
-gui.linkgrabber.title_1 = Link(s) in
-gui.linkgrabber.title_2 = Package(s)
+gui.linkgrabber.title = Linkcollector active (D&D + Clipboard) %s Link(s) in %s Package(s)
 gui.linkgrabber.writeInfoFile = Write infoFile for this package
 gui.linkinfo.available = Available
 gui.linkinfo.available.notchecked = not checked
 gui.linkinfo.available.ok = File OK
 gui.linkinfo.comment = Comment
 gui.linkinfo.download = Download
-gui.linkinfo.download.activated =  is activated
-gui.linkinfo.download.deactivated =  is deactived
-gui.linkinfo.download.notunderway =  is not in process
-gui.linkinfo.download.underway =  is in process
+gui.linkinfo.download.activated = is activated
+gui.linkinfo.download.deactivated = is deactived
+gui.linkinfo.download.notunderway = is not in process
+gui.linkinfo.download.underway = is in process
 gui.linkinfo.filesize = Filesize
 gui.linkinfo.package = Package
 gui.linkinfo.password = Password
