--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -426,18 +426,16 @@ gui.linkgrabber.tabs.context.acceptSelection = Auswahl übernehmen
 gui.linkgrabber.tabs.context.delete = Entfernen
 gui.linkgrabber.tabs.context.deleteOthers = Alle Anderen entfernen
 gui.linkgrabber.tabs.context.newpackage = Neues Paket
-gui.linkgrabber.title = Linksammler:
-gui.linkgrabber.title_1 = Link(s) in
-gui.linkgrabber.title_2 = Paket(en)
+gui.linkgrabber.title = Linksammler: %s Link(s) in %s Paket(en)
 gui.linkinfo.available = Verfügbar
 gui.linkinfo.available.notchecked = noch nicht überprüft
 gui.linkinfo.available.ok = Datei OK
 gui.linkinfo.comment = Kommentar
 gui.linkinfo.download = Download
-gui.linkinfo.download.activated =  ist aktiviert
-gui.linkinfo.download.deactivated =  ist deaktiviert
-gui.linkinfo.download.notunderway =  ist nicht in Bearbeitung
-gui.linkinfo.download.underway =  ist in Bearbeitung
+gui.linkinfo.download.activated = ist aktiviert
+gui.linkinfo.download.deactivated = ist deaktiviert
+gui.linkinfo.download.notunderway = ist nicht in Bearbeitung
+gui.linkinfo.download.underway = ist in Bearbeitung
 gui.linkinfo.filesize = Dateigröße
 gui.linkinfo.package = Packet
 gui.linkinfo.password = Passwort
