--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -563,7 +563,7 @@ gui.menu.action.search.desc = Use search engines
 gui.menu.action.search.mnem = F
 gui.menu.action.search.name = Search
 gui.menu.action.start.accel = CTRL+9
-gui.menu.action.start.desc = Start/Stop downloadS
+gui.menu.action.start.desc = Start/Stop downloads
 gui.menu.action.start.mnem = D
 gui.menu.action.start.name = Start
 gui.menu.action.tester.accel = CTRL+T
