--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -608,6 +608,12 @@ gui.menu.action.wiki.accel = CTRL+W
 gui.menu.action.wiki.desc = jDownloader Wiki öffnen
 gui.menu.action.wiki.mnem = W
 gui.menu.action.wiki.name = Wiki öffnen
+gui.menu.action.restart.desc = JDownloader neustarten
+gui.menu.action.restart.name = Restart
+gui.menu.action.remove.packages.name = Entferne vollständige Packages
+gui.menu.action.remove.packages.desc = Entferne vollständige Packages
+gui.menu.action.remove.links.desc = Entferne vollständige Downloads
+gui.menu.action.remove.links.name = Entferne vollständige Downloads
 gui.menu.add = Hinzufügen
 gui.menu.addons = Addons
 gui.menu.edit = Bearbeiten
